# moff

./: build.gradle  gradle.properties  settings.gradle
TestBlue/app/: build.gradle.kts
TestBlue/app/src/androidTest/java/los/testingslos/testblue/: ExampleInstrumentedTest.kt
TestBlue/app/src/main/: AndroidManifest.xml
TestBlue/app/src/main/java/los/testingslos/testblue/: Applicat.kt  BluetoothHandler.kt  MainActivity.kt
TestBlue/app/src/main/res/layout/: activity_main.xml
TestBlue/app/src/main/res/values/: strings.xml  themes.xml
TestBlue/app/src/main/res/values-night/: themes.xml
TestBlue/app/src/test/java/los/testingslos/testblue/: ExampleUnitTest.kt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sergey/los/freelanceideas/renderings/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: renderingStart.cpp
app/src/main/java/com/sergey/los/freelanceideas/renderings/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sergey/los/freelanceideas/renderings/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
isklad/app/: google-services.json
isklad/app/src/main/java/los/worklast/isklad/: APPlicationsSta.kt  MainActivity.kt
isklad/app/src/main/res/drawable/: ic_photo.xml  ic_shutter_focused.xml
isklad/app/src/main/res/layout/: activity_main.xml  camera_tw.xml  prihod_yxod_fragment.xml  see_all_fragment.xml  sklad_choise.xml  start_fragment.xml
isklad/app/src/main/res/values/: dimens.xml
(+6 files in other folders)
